--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
     "@hookform/resolvers": "^2.8.8",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
+    "bson": "^4.6.1",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
@@ -26,12 +28,15 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
+    "realm": "^10.13.0",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/bson": "^4.2.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/styled-components-react-native": "^5.1.3",
