--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "bson": "^4.6.1",
+    "date-fns": "^2.28.0",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
+    "intl": "^1.2.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.27.1",
